--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.16'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'com.jayway.restassured:rest-assured:2.9.0'
 
 }
 
